--- a/test/input/ressources/article.html
+++ b/test/input/ressources/article.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>{title}</title>
-    <link rel="stylesheet" href="ressources/mainStyle.css">
+    <link rel="stylesheet" href="../../ressources/style.css">
   </head>
   <body>
-    <h1>{title}</h1>
-    <h2>{subtitle}</h2>
-    <div class="grid">
-      
+    <div class="corps">
+      <a href="../../">Retour</a>
+      <h1>{title}</h1>
+      <h2>{subtitle}</h2>
+      {content}
     </div>
   </body>
 </html>
