--- a/test/output/index.html
+++ b/test/output/index.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="ressources/style.css">
   </head>
   <body>
-    <h1>My new blog</h1>
-    <h2>Where I speak about trains !</h2>
-    <div class="articles">
-      <a href='./articles/Hello'>My first article !</a>
+    <div class="corps">
+      <h1>My new blog</h1>
+      <h2>Where I speak about trains !</h2>
+      <div class="articles">
+        <a href='./articles/Hello'>My first article !</a>
+      </div>
     </div>
   </body>
 </html>
