--- a/test/input/ressources/main.html
+++ b/test/input/ressources/main.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>{title}</title>
-    <link rel="stylesheet" href="ressources/mainStyle.css">
+    <link rel="stylesheet" href="ressources/style.css">
   </head>
   <body>
-    <h1>{title}</h1>
-    <h2>{subtitle}</h2>
-    <div class="grid">
-      
+    <div class="corps">
+      <h1>{title}</h1>
+      <h2>{subtitle}</h2>
+      <div class="articles">
+        {links}
+      </div>
     </div>
   </body>
 </html>
