added second article for date sorting

--- a/test/output/index.html
+++ b/test/output/index.html
@@ -11,6 +11,8 @@
       <h2>Where I speak about trains !</h2>
       <div class="articles">
         <a href='./articles/Hello'>My first article !</a>
+<br>
+<a href='./articles/HelloBis'>My second article !</a>
       </div>
     </div>
   </body>
